docs/api/qiskit/0.29/qiskit.visualization.pulse_v2.IQXStandard.md
# IQXStandard



`IQXStandard(**kwargs)`

Bases: `dict`

Standard pulse stylesheet.

*   Generate stepwise waveform envelope with latex pulse names.
*   Apply phase modulation to waveforms.
*   Plot frame change symbol with formatted operand values.
*   Show chart name with scaling factor.
*   Show snapshot and barrier.
*   Do not show acquire channels.
*   Channels are sorted by index and control channels are added to the end.

## Methods

|                                                                                                                                                                                  |                                                                                                                                                                                                                               |
| -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| [`clear`](qiskit.visualization.pulse_v2.IQXStandard.clear#qiskit.visualization.pulse_v2.IQXStandard.clear "qiskit.visualization.pulse_v2.IQXStandard.clear")                     |                                                                                                                                                                                                                               |
| [`copy`](qiskit.visualization.pulse_v2.IQXStandard.copy#qiskit.visualization.pulse_v2.IQXStandard.copy "qiskit.visualization.pulse_v2.IQXStandard.copy")                         |                                                                                                                                                                                                                               |
| [`fromkeys`](qiskit.visualization.pulse_v2.IQXStandard.fromkeys#qiskit.visualization.pulse_v2.IQXStandard.fromkeys "qiskit.visualization.pulse_v2.IQXStandard.fromkeys")         | Create a new dictionary with keys from iterable and values set to value.                                                                                                                                                      |
| [`get`](qiskit.visualization.pulse_v2.IQXStandard.get#qiskit.visualization.pulse_v2.IQXStandard.get "qiskit.visualization.pulse_v2.IQXStandard.get")                             | Return the value for key if key is in the dictionary, else default.                                                                                                                                                           |
| [`items`](qiskit.visualization.pulse_v2.IQXStandard.items#qiskit.visualization.pulse_v2.IQXStandard.items "qiskit.visualization.pulse_v2.IQXStandard.items")                     |                                                                                                                                                                                                                               |
| [`keys`](qiskit.visualization.pulse_v2.IQXStandard.keys#qiskit.visualization.pulse_v2.IQXStandard.keys "qiskit.visualization.pulse_v2.IQXStandard.keys")                         |                                                                                                                                                                                                                               |
| [`pop`](qiskit.visualization.pulse_v2.IQXStandard.pop#qiskit.visualization.pulse_v2.IQXStandard.pop "qiskit.visualization.pulse_v2.IQXStandard.pop")                             | If key is not found, d is returned if given, otherwise KeyError is raised                                                                                                                                                     |
| [`popitem`](qiskit.visualization.pulse_v2.IQXStandard.popitem#qiskit.visualization.pulse_v2.IQXStandard.popitem "qiskit.visualization.pulse_v2.IQXStandard.popitem")             | 2-tuple; but raise KeyError if D is empty.                                                                                                                                                                                    |
| [`setdefault`](qiskit.visualization.pulse_v2.IQXStandard.setdefault#qiskit.visualization.pulse_v2.IQXStandard.setdefault "qiskit.visualization.pulse_v2.IQXStandard.setdefault") | Insert key with a value of default if key is not in the dictionary.                                                                                                                                                           |
| [`update`](qiskit.visualization.pulse_v2.IQXStandard.update#qiskit.visualization.pulse_v2.IQXStandard.update "qiskit.visualization.pulse_v2.IQXStandard.update")                 | If E is present and has a .keys() method, then does: for k in E: D\[k] = E\[k] If E is present and lacks a .keys() method, then does: for k, v in E: D\[k] = v In either case, this is followed by: for k in F: D\[k] = F\[k] |
| [`values`](qiskit.visualization.pulse_v2.IQXStandard.values#qiskit.visualization.pulse_v2.IQXStandard.values "qiskit.visualization.pulse_v2.IQXStandard.values")                 |                                                                                                                                                                                                                               |
